@@ -2,3 +2,14 @@
 vendor/
 coverage/
 pkg/
+Gemfile.lock
+
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
